--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/{??? ?? ?? ?? ?? ??? ???.}
+    url: jdbc:mysql://localhost:3306/{??? ?? ?? ?? ?? ??? ???.}/
     username: root
     password:
 
