feat: 분산락 (Redisson)과 비관적 락을 통핸 2중 락 구현
테스트 코드 및 기본 컨벤션 수정 필요

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'	//Swagger 의존성 추가
+
+	// Redisson
+	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
+
 }
 
 tasks.named('test') {
