refactor: Q클래스 ignore 등록

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+/build/generated/
+/src/main/generated/
+/generated/
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
