[FEAT] 쿠폰 관련 API 구현
* feat: 쿠폰 생성 구현

* feat: 쿠폰 발급 구현

* feat: 쿠폰 중복 발급 방지 구현

* feat: 나의 쿠폰 조회 구현

* test: 쿠폰 관련 테스트 코드 작성

* refactor: 메세지 하드 코딩 분리

* refactor: 오타 및 변수명 수정

* feat: 네임드락 구현

* refactor: 주석 추가 및 불필요한 코드 제거

* fix: 나의 쿠폰 조회시 발생하는 N+1 문제 해결

* feat: 분산락 (Redisson)과 비관적 락을 통핸 2중 락 구현

테스트 코드 및 기본 컨벤션 수정 필요

* test: 테스트 코드 수정

* refactor: 코드 컨벤션 맞게 수정

* fix: yml 포맷 수정

* fix: yml 포맷 수정

* fix: ci script에 레디스 추가

* refactor: Facade 패턴 적용

* refactor: 리뷰 반영

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;MODE=MYSQL;NON_KEYWORDS=USER
-    jpa:
-      hibernate:
-        ddl-auto: create-drop
+  redis:
+    host: localhost
+    port: 6379
+    password:
