--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'	//Swagger 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 의존성 추가
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'	// Redisson
 }
 
 tasks.named('test') {
