Kafka 적용 시도 했지만 실패한 코드
만약 제대로 구현해보고 싶으면 아예 구조적으로 뒤집어 엎어야 한다.

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	// Redisson
 	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
 
+	implementation 'org.springframework.kafka:spring-kafka'
+
 }
 
 tasks.named('test') {
