--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 의존성 추가
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'	// Redisson
+	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
+
 }
 
 tasks.named('test') {
