--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     host: localhost
     port: 6379
     password:
+
+jwt:
+  secretKey: concert_jwt_secretconcert_jwt_secretconcert_jwt_secretconcert_jwt_secretconcert_jwt_secret
+  expiration: 1800000
