--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,23 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/{??? ?? ?? ?? ?? ??? ???.}/
-    username: root
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
+    driver-class-name: org.h2.Driver
+    username: sa
     password:
 
   jpa:
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
         use_sql_comments: true
         format_sql: true
     hibernate:
-      ddl-auto: create
-
+      ddl-auto: update
+  redis:
+    host: localhost
+    port: 6379
+    password:
 logging:
   level:
     ROOT: INFO
