--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/{??? ?? ?? ?? ?? ??? ???.}/
-    username: root
+    url: jdbc:h2:mem:testdb;MODE=MYSQL;NON_KEYWORDS=USER
+
+  redis:
+    host: localhost
+    port: 6379
     password:
-
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        use_sql_comments: true
-        format_sql: true
-    hibernate:
-      ddl-auto: create
-
-logging:
-  level:
-    ROOT: INFO
-    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
 
 jwt:
   secret: secretsecretsecretkeykeykeykeykeykey
