--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,16 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
+ext {
+	springCloudVersion = "2023.0.3"
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -28,6 +38,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 	//jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
