--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/{??? ?? ?? ?? ?? ??? ???.}/
+    url: jdbc:mysql://localhost:3306/team_project2?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password:
+    password: 8112
+
 
   jpa:
     show-sql: true
@@ -11,7 +12,13 @@ spring:
         use_sql_comments: true
         format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+      dialect: org.hibernate.dialect.MySQLDialect  # 추가한 부분 유지
+
+  redis:
+    host: localhost
+    port: 6379
+    password: 8112
 
 logging:
   level:
