--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;MODE=MYSQL;NON_KEYWORDS=USER
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+
+
 
   redis:
     host: localhost
