--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ jwt:
   login_expiration_time: 7200 #2시간
   queue_expiration_time: 3600 # 1시간
 
+
 webhook:
   slack:
-    url: "??????????????????????????????"
+    url: "?????????????????????"
