--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     hibernate:
       ddl-auto: create-drop
 
+  redis:
+    host: localhost
+    port: 6379
+    password:
+
 jwt:
   secret: secretsecretsecretkeykeykeykeykeykey
   login_expiration_time: 7200 #2시간
@@ -12,4 +17,4 @@ jwt:
 
 webhook:
   slack:
-    url: "????????????????????"
+    url: "??????????????????"
