--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,23 @@ spring:
     port: 6379
     password:
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: bookyouseat22@gmail.com
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          timeout: 6000
+          starttls:
+            enable: true
+
 jwt:
   secret: secretsecretsecretkeykeykeykeykeykey
   login_expiration_time: 7200 #2시간
   queue_expiration_time: 3600 # 1시간
+
+mail:
+  expiration_time: 300 #5분
