--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: bookyouseat22@gmail.com
-    password:
+    password: mjcfwlmsvdoytzhz
     properties:
       mail:
         smtp:
