--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,18 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Set up secret yml file
+      env:
+        YAML_SECRET: ${{ secrets.YAML_SECRET }}
+        YAML_DIR: src/main/resources
+        YAML_TEST_DIR: src/test/resources
+        YAML_FILE_NAME: application.yml
+      run: |
+        echo $YAML_SECRET | base64 --decode > $YAML_DIR/$YAML_FILE_NAME
+        echo $YAML_SECRET | base64 --decode > $YAML_TEST_DIR/$YAML_FILE_NAME
+        echo "YAML_SECRET has been decoded and saved to $YAML_DIR/$YAML_FILE_NAME"
+        echo "YAML_SECRET has been decoded and saved to $YAML_TEST_DIR/$YAML_FILE_NAME"
+
     - name: Start Redis
       uses: supercharge/redis-github-action@1.1.0
       with:
