--- a/build.gradle
+++ b/build.gradle
@@ -70,10 +70,14 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	
 	//슬랙 api 추가
-
 	implementation("com.slack.api:bolt:1.18.0")
 	implementation("com.slack.api:bolt-servlet:1.18.0")
 	implementation("com.slack.api:bolt-jetty:1.18.0")
+
+	//s3
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.765'
+	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 
 }
 
